    * Added Agent for OpenBSD
    * Added Checks for UPS devices
    * cisco_hsrp: New Check for monitoring HSRP groups on Cisco Routers. (SMIv2 version)
    * zypper: new check and plugin mk_zypper for checking zypper updates.
    * aironet_clients: Added support for further Cisco WLAN APs (Thanks to Stefan Eriksson for OIDs)
    * aironet_errors: Added support for further Cisco WLAN APs

    WATO:
    * Added permission to control the "clone host" feature in WATO
    * Added new role/permission matrix page in WATO to compare
      permissions of roles
    * FIX: remove line about number of rules in rule set overview
      (that garbled the logical layout)
    * Rules now have an optional comment and an URL for linking to 
      documntation
    * Rule now can be disabled without deleting them.
    * Added new hook "sites-saved"
    * Allow @ in user names (needed for some Kerberos setups)
    * Implemented new option in WATO attributes: editable
      When set to False the attribute can only be changed during creation
      of a new object. When editing an object this attribute is only displayed.
    * new: search for rules in "Host & Service Configuration"
    * parent scan: new option "ping probes", that allows skipping 
      unreachable gateways.
    * User managament: Added fields for editing host/service notification commands
    * Added new active check configuration for check_smtp
    * Improved visualization of ruleset lists/dictionaries
    * Encoding special chars in RegExp valuespec (e.g. logwatch patterns)
    * Added check_interval and retry_interval rules for host checks
    * Removed wmic_process rule from "inventory services" as the check does not support inventory
    * FIX: Removed double collect_hosts() call in activate changes hook
    * FIX: Fixed double hook execution when using localized multisite
    * FIX: User list shows names of contactgroups when no alias given