@@ -55,6 +55,8 @@
     * zypper: new check and plugin mk_zypper for checking zypper updates.
     * aironet_clients: Added support for further Cisco WLAN APs (Thanks to Stefan Eriksson for OIDs)
     * aironet_errors: Added support for further Cisco WLAN APs
+    * apache_status: New check to monitor apache servers which have the status-module enabled.
+      This check needs the linux agent plugin "apache_status" installed on the target host.
 
     WATO:
     * Added permission to control the "clone host" feature in WATO
